Fixed page template layout issues

--- a/app/backups/styles.module.css
+++ b/app/backups/styles.module.css
@@ -71,7 +71,6 @@
     justify-content: space-evenly;
     align-items: center;
     padding: 30px 0;
-    background-color: red;
   }
 
   .detailsBox,
