--- a/app/components/PageTemplate/styles.module.css
+++ b/app/components/PageTemplate/styles.module.css
@@ -1,10 +1,20 @@
-.pageTemplate {}
+.page {
+  height: calc(100vh - 50px);
+  display: flex;
+  flex-direction: column;
+}
 
 .outerBox {
   padding: 14px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .pageBody {
   margin-top: 20px;
-  height: calc(100vh - var(--navHeight));
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
